--- a/02 Mega Bus/index.html
+++ b/02 Mega Bus/index.html
@@ -46,11 +46,11 @@
             <div class="inputs">
                 <div class="input-group">
                     <label" for="">From</label>
-                        <input id="from" class="inp-style" type="text" name="" placeholder="Dhaka">
+                        <input  class="inp-style" type="text" name="" placeholder="Dhaka">
                 </div>
                 <div class="input-group">
                     <label" for="">From</label>
-                        <input id="to" class="inp-style" type="text" name="" placeholder="Chittagone">
+                        <input class="inp-style" type="text" name="" placeholder="Chittagone">
                 </div>
             </div>
 
